--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
     <title>Ana Bollain</title>
+    <meta name="google-site-verification" content="qUZypI5WVSZPIL8yzOOA8aRoFE2iOVO-YM1jy9_Pvac" />
   </head>
   <body class="body">
     <div id="root"></div>
