Implement webiste preview for social media sites

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,25 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
     <title>Ana Bollain</title>
     <meta name="google-site-verification" content="qUZypI5WVSZPIL8yzOOA8aRoFE2iOVO-YM1jy9_Pvac" />
+    <!--for Microsoft apps-->
+    <meta name="msapplication-TileImage" content="https://ana-bollain-portfolio-production.up.railway.app/static/media/avatar.a379b3ca81c1dc94b7a8.png">
+    <!--for Facebook & Whatsapp-->
+    <!-- Site Name, Title and Description to be displayed-->
+    <meta property="og:site_name" content="Ana Bollain" />
+    <meta property="og:title" content="Ana Bollain Portfolio" />
+    <meta property="og:description" content="Discover my projects">
+    <!--Image to display-->
+    <meta property="og:image" itemprop="image" content="https://ana-bollain-portfolio-production.up.railway.app/static/media/avatar.a379b3ca81c1dc94b7a8.png"/>
+
+    <meta property="og:type" content="website" />
+    <meta property="og:image:type" content="image/png"/>
+    <!--Any size up to 300. Anything above 300px will not work in Whatsapp-->
+    <meta property="og:image:width" content="300"/>
+    <meta property="og:image:height" content="300"/>
+    <!--Website to visit when clicked in Facebook or Whatsapp-->
+    <meta property="og:url" content="https://ana-bollain-portfolio-production.up.railway.app/" />
+
+    <meta property="og:locale" content="en_GB" />
   </head>
   <body class="body">
     <div id="root"></div>
