--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,13 @@
     <title>Ana Bollain</title>
     <meta name="google-site-verification" content="qUZypI5WVSZPIL8yzOOA8aRoFE2iOVO-YM1jy9_Pvac" />
     <!--for Microsoft apps-->
-    <meta name="msapplication-TileImage" content="https://ana-bollain-portfolio-production.up.railway.app/static/media/avatar.a379b3ca81c1dc94b7a8.png">
+    <meta name="msapplication-TileImage" content="https://i.pinimg.com/564x/96/52/50/965250342bbfd56fc0e51f1fb2d0bb67.jpg">
     <!--for Facebook & Whatsapp-->
     <!-- Site Name, Title and Description to be displayed-->
-    <meta property="og:site_name" content="Ana Bollain" />
-    <meta property="og:title" content="Ana Bollain Portfolio" />
-    <meta property="og:description" content="Discover my projects">
+    <meta property="og:title" content="Ana Bollain" />
+    <meta property="og:description" content="Discover my online portfolio.">
     <!--Image to display-->
-    <meta property="og:image" itemprop="image" content="https://ana-bollain-portfolio-production.up.railway.app/static/media/avatar.a379b3ca81c1dc94b7a8.png"/>
+    <meta property="og:image" itemprop="image" content="https://i.pinimg.com/564x/96/52/50/965250342bbfd56fc0e51f1fb2d0bb67.jpg"/>
 
     <meta property="og:type" content="website" />
     <meta property="og:image:type" content="image/png"/>
