Update website image

--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,13 @@
     <title>Ana Bollain</title>
     <meta name="google-site-verification" content="qUZypI5WVSZPIL8yzOOA8aRoFE2iOVO-YM1jy9_Pvac" />
     <!--for Microsoft apps-->
-    <meta name="msapplication-TileImage" content="https://i.pinimg.com/564x/96/52/50/965250342bbfd56fc0e51f1fb2d0bb67.jpg">
+    <meta name="msapplication-TileImage" content="https://images.pexels.com/photos/326514/pexels-photo-326514.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
     <!--for Facebook & Whatsapp-->
     <!-- Site Name, Title and Description to be displayed-->
     <meta property="og:title" content="Ana Bollain" />
     <meta property="og:description" content="Discover my online portfolio.">
     <!--Image to display-->
-    <meta property="og:image" itemprop="image" content="https://i.pinimg.com/564x/96/52/50/965250342bbfd56fc0e51f1fb2d0bb67.jpg"/>
+    <meta property="og:image" itemprop="image" content="https://images.pexels.com/photos/326514/pexels-photo-326514.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
 
     <meta property="og:type" content="website" />
     <meta property="og:image:type" content="image/png"/>
